# CMakeTemplate

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
.github/workflows/: build-android.yml  build-emscripten.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml
cmake/: README.md
src/: Main.c  Main.cpp
